class CSSColor:
    def __init__(self, hex_code: str):
        self.__hex_code = hex_code
