from enum import Enum


class Rotation(Enum):
    DEGREE_0 = 0
    DEGREE_90 = 1
    DEGREE_180 = 2
    DEGREE_270 = 3
