@startuml
package CSSColor{
    class CSSColor {
        hex_code: string
    }
}
package Game{
    class Board
    class Square
    class PieceSet
    class Color {
        color_id: integer
        name: string
    }
    class Piece {
        number: integer
    }
    class Constraints {
        up: Color
        right: Color
        down: Color
        left: Color
    }
    Constraints "up" o-right-> Game.Color
    Constraints "down" o-right-> Game.Color
    Constraints "left" o-right-> Game.Color
    Constraints "right" o-right-> Game.Color

    Board *--> "1.N" Square
    PieceSet *--> "N" Color: Possible
    PieceSet *--> "1.N" Piece
    Color "main_color" *--> CSSColor.CSSColor
    Color "secondary_color" *--> CSSColor.CSSColor
    Piece "up" *--> Color
    Piece "down" *--> Color
    Piece "left" *--> Color
    Piece "right" *--> Color
}
package RotatedPiece{

    class RotatedPiece
    class Rotation
    RotatedPiece o--> Rotation
    RotatedPiece o--> Game.Piece
    Rotation <|-- Degree0
    Rotation <|-- Degree90
    Rotation <|-- Degree180
    Rotation <|-- Degree270
}

package Situation {
    class Situation
    class PlacedPiece

    PlacedPiece o--> RotatedPiece.RotatedPiece
    Situation *--> "0.N" PlacedPiece
}

package Itinerary {
    class Itinerary {
        name: string
    }
    class Path
    class Step {
        is_evaluated: bool
    }
    Path *--> Step : "next"
    Path *--> "0.N" Step : "rest"
    Itinerary *--> Path
    Step *--> "0.N" Path : "possibilities"
}

Path *--> Situation.Situation
PlacedPiece o--> Square
Step o--> Square
@enduml